# voom

./: .gitignore  README.md  config.py  config.yaml  pyproject.toml  train.py
benchmark/: benchmark.py  eval.py  eval_all.sh  profile_stages.py  viz.py
checkpoints/long/: config.yaml
checkpoints/rev14/: README.md
checkpoints/rev7/: README.md
deploy/: build_trt.py  camera.py  preprocess.py  run.py  trt_model.py  trt_module.py  viewer.py
scripts/: convert_to_safetensors.py  download_weights.sh  generate_da_depth.py  generate_da_depth.sh  plot_mem.py  precompute_sem_2d.py
voom/: __init__.py  data.py  model.py  ops.cu  ops.py  utils.py
