[project]
name = "voom"
version = "0.1.0"
description = "VOlumetric Occupancy from Monocular video"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pyyaml",
    "opencv-python",
    "torch",
    "torchvision",
    "ninja",
    "onnx",
    "onnxscript",
    "open3d",
    "moderngl-window",
    "safetensors"
]

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu128"

[dependency-groups]
dev = [
    "black",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["voom*"]
